<resources>
    <string name="app_name">InternshipAspire</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="license">You acknowledge that the information you provide is accurate. You agree not to use this app for any unlawful or unauthorized purposes.</string>
</resources>