<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="17dp"
    android:background="@drawable/background"

    >

    <TextView
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="cursive"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_color"
            android:layout_marginTop="20dp"
            app:backgroundTint="@null"
            android:layout_marginLeft="50dp"
            />


        <Button
            android:id="@+id/registerNow"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:layout_marginTop="20dp"

            android:background ="@drawable/button_color"
            app:backgroundTint="@null"
            android:layout_marginLeft="50dp"


            />



    </LinearLayout>

</LinearLayout>